--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
 body {
   font-family: 'Press Start 2P', sans-serif;
   color: #eee;
-  background-color: #222;
+  background-image: linear-gradient(to right, #434343 0%, black 100%);
   /* background-color: #60b347; */
 }
 
